plugins {
    id 'java'
    id 'org.jetbrains.kotlin.jvm' version '1.3.41'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
    implementation 'com.google.guava:guava:23.0'
    testImplementation 'junit:junit:4.12'
}

group = 'com.adventofcode'
version = '1.0-SNAPSHOT'
sourceCompatibility = '12'

tasks.withType(JavaCompile).each {
    it.options.compilerArgs.add('--enable-preview')
}

test {
    jvmArgs(['--enable-preview'])
    systemProperty "print", System.getProperty("print")

    testLogging {
        outputs.upToDateWhen {false}
        showStandardStreams = true
    }
}
